tests/errors/bad_ref2.asm
FUNC LABEL 0
    MOV STK A VAL 69
    REF VAL 3 STK A
    PRINT STK A
    RET
